# YFEL

./: .gitignore  README.md
.github/workflows/: cmake-linux.yml  cmake-windows.yml  cmake.yml  sync.yml
doc/: YFEL.pptx
src/: CMakeLists.txt  ChipID.h  ChipList.h  chip_status.cpp  chip_status.h  chipdb.cpp  chipdb.h  chipop.cpp  chipop.h  chips.cpp  chips.h  chipworker.cpp  chipworker.h  config.h  config.h.in  exceptions.h  eye_master.cpp  eye_master.h  eye_master.ui  eyemaster.cpp  eyemaster.h  eyemaster.ui  fel.cpp  fel.h  fileio.cpp  fileio.h  icon.qrc  macros.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  processbar.cpp  processbar.h  processbar.ui  sha256.cpp  sha256.h  spi.cpp  spi.h  spi_nand.cpp  (+15 more)
src/assets/: YFEL.rc.in
src/assets/applications/: io.github.yuzukitsuru.yfel.desktop
src/chips/: a10.c  a10.h  a13.c  a13.cpp  a13.h  a20.c  a23.c  a31.c  a33.c  a40i.c  a64.c  a80.c  a83t.c  chip_db.h  chip_type.cpp  chip_type.h  chip_version.h  d1.c  d1.cpp  d1.h  dram_header.h  f1c100s.c  f1c100s.cpp  f1c100s.h  h2.c  h5.c  h6.c  h616.c  r328.c  r329.c  r528.c  r528.cpp  r528.h  t507.c  v3s.c  v536.c  v831.c  v853.c  v853.cpp  v853.h
src/i18n/: YFEL_zh_CN.ts
src/lib/QHexView/: QHexView.cpp  QHexView.h
